Closed Bug 686257 Opened 14 years ago Closed 14 years ago

nsMenuPopupFrame.cpp:149:18: warning: unused variable 'presContext'

Categories

(Core :: Layout, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla9

People

(Reporter: dholbert, Assigned: dholbert)

References

(Blocks 1 open bug, )

Details

Attachments

(1 file)

Bug 669028 removed the last usage of the local-var |presContext| in nsMenuPopupFrame::Init, triggering: { layout/xul/base/src/nsMenuPopupFrame.cpp: In member function 'virtual nsresult nsMenuPopupFrame::Init(nsIContent*, nsIFrame*, nsIFrame*)': layout/xul/base/src/nsMenuPopupFrame.cpp:149:18: warning: unused variable 'presContext' } Upcoming attached patch removes this variable, fixing the warning.
Assignee: nobody → dholbert
Status: NEW → ASSIGNED
Attachment #559815 - Flags: review?(masayuki)
Comment on attachment 559815 [details] [diff] [review] fix: remove unused variable Thank you!
Attachment #559815 - Flags: review?(masayuki) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [inbound]
Target Milestone: --- → mozilla9
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: