Bug 686257: remove now-unused variable 'presContext' from nsMenuPopupFrame::Init to fix gcc warning. r=masayuki